implemented slicing on one MFPAD with cross section

--- a/b1_slice.ipynb
+++ b/b1_slice.ipynb
@@ -25,6 +25,11 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
     "\n",
+    "from iminuit import Minuit\n",
+    "from iminuit.cost import LeastSquares\n",
+    "from iminuit.util import describe, make_func_code\n",
+    "import traceback\n",
+    "\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\n",
     "\n",
     "#to see which classes have been defined so far\n",
@@ -34,16 +39,221 @@
     "\n",
     "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
     "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_9600-3700ns_newEfield_multiCH9_MFPAD_30_t0.root\")\n",
-    "k=fileRCR[loc].keys()\n",
-    "d=dict(fileRCR[loc].classes()) # shows the type of each item\n",
-    "dict(fileRCR[loc]) # keys : values\n",
-    "check = fileRCR[loc+\"/MFPAD3D_engate_costheta_-1.00_phi_-180\"]\n",
-    "type(check)\n",
-    "check._members()"
+    "\n",
+    "# initialize a nparray: best way is to know the size in advance\n",
+    "# MFPAD_RCR=np.zeros((72,2))\n",
+    "# ctetha_RCR=np.zeros((72,2))\n",
+    "\n",
+    "MFPAD_RCR=[] # initilialises a list\n",
+    "ctetha_RCR=[]\n",
+    "cosphi=[]\n",
+    "MFPAD_xy=[]\n",
+    "run_one=0\n",
+    "for key, value in fileRCR[loc].items():\n",
+    "        filename=loc+\"/\"+str(key).split(\";\")[0].replace(\"b'\",\"\")\n",
+    "        if \"mfpad3d_engate_costheta\" in filename.lower():\n",
+    "            # print(filename)\n",
+    "            ctheta_nm=float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
+    "            phi_nm=float((str(key).split(\"phi_\")[1]).split(\";\")[0])\n",
+    "            # phicos.append((ctheta_nm,phi_nm))\n",
+    "            cosphi.append((ctheta_nm+0.1666,phi_nm+15)) # centered in the middle of the bins\n",
+    "            #ctheta_n=re.search(\"costheta_(.*)_phi\", str(key)).group(1) #alternative with import re\n",
+    "            temp=np.array(fileRCR[filename].numpy())\n",
+    "            MFPAD_RCR.append(temp[0]) # it is a list!\n",
+    "            if run_one == 0:\n",
+    "                MFPAD_xy.append((temp[1][0][0] , temp[1][0][1])) # phi cos(theta) from 2D\n",
+    "                run_one=1\n",
+    "        elif \"cos(theta)\" in filename.lower():\n",
+    "            ctheta_nc=float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
+    "            temp=np.array(fileRCR[filename].numpy())\n",
+    "            ctetha_RCR.append(temp[0]) # it is a list!\n",
+    "            ctheta_c = temp[1] # cos(theta) from 1D\n",
+    "MFPAD_RCR=np.array(MFPAD_RCR)\n",
+    "ctetha_RCR=np.array(ctetha_RCR) # it is a list!\n",
+    "\n",
+    "MFPAD_RCL=[] # initilialises a list\n",
+    "ctetha_RCL=[]\n",
+    "cosphi=[]\n",
+    "MFPAD_xy=[]\n",
+    "run_one=0\n",
+    "for key, value in fileRCL[loc].items():\n",
+    "        filename=loc+\"/\"+str(key).split(\";\")[0].replace(\"b'\",\"\")\n",
+    "        if \"mfpad3d_engate_costheta\" in filename.lower():\n",
+    "            # print(filename)\n",
+    "            ctheta_nm=float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
+    "            phi_nm=float((str(key).split(\"phi_\")[1]).split(\";\")[0])\n",
+    "            # phicos.append((ctheta_nm,phi_nm)) #they are inverted\n",
+    "            cosphi.append((ctheta_nm+0.1666,phi_nm+15))  # centered in the middle of the bins\n",
+    "            #ctheta_n=re.search(\"costheta_(.*)_phi\", str(key)).group(1) #alternative with import re\n",
+    "            temp=np.array(fileRCL[filename].numpy())\n",
+    "            MFPAD_RCL.append(temp[0]) # it is a list!\n",
+    "            if run_one == 0:\n",
+    "                MFPAD_xy.append((temp[1][0][0] , temp[1][0][1])) # phi cos(theta) from 2D\n",
+    "                run_one=1\n",
+    "        elif \"cos(theta)\" in filename.lower():\n",
+    "            ctheta_nc=float((str(key).split(\"costheta_\")[1]).split(\"_phi\")[0])\n",
+    "            temp=np.array(fileRCL[filename].numpy())\n",
+    "            ctetha_RCL.append(temp[0]) # it is a list!\n",
+    "            ctheta_c = temp[1] # cos(theta) from 1D\n",
+    "MFPAD_RCL=np.array(MFPAD_RCL)\n",
+    "ctetha_RCL=np.array(ctetha_RCL) # it is a list!\n",
+    "\n",
+    "ctheta_cred = (ctheta_c[1:] + ctheta_c[:-1])/2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(len(MFPAD_RCL[0].T))\n",
+    "print(MFPAD_RCL[0].T[0])\n",
+    "print(len(MFPAD_RCL[0].T[0]))\n",
+    "\n",
+    "x_bins = np.linspace(-1,1, len(MFPAD_RCL[0].T[0]))\n",
+    "\n",
+    "plt.scatter(x_bins,MFPAD_RCL[0].T[0],color='r')\n",
+    "plt.errorbar(x_bins,MFPAD_RCL[0].T[0], yerr=np.sqrt(MFPAD_RCL[0].T[0]), fmt=\"o\")\n",
+    "# plt.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LeastSquares:\n",
+    "    \"\"\"\n",
+    "    Generic least-squares cost function with error.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, model, x, y, err):\n",
+    "        self.model = model  # model predicts y for given x\n",
+    "        self.x = np.array(x)\n",
+    "        self.y = np.array(y)\n",
+    "        self.err = np.array(err)\n",
+    "        # self.err = err\n",
+    "\n",
+    "    def __call__(self, *par):  # we accept a variable number of model parameters\n",
+    "        ym = self.model(self.x, *par)\n",
+    "        z = (self.y - ym)/(self.err**2)\n",
+    "        return np.sum(z**2)\n",
+    "\n",
+    "# does this inherits from LeastSquare?\n",
+    "class BetterLeastSquares(LeastSquares):\n",
+    "    def __init__(self, model, x, y, err):\n",
+    "        super().__init__(model, x, y, err)\n",
+    "        self.func_code = make_func_code(describe(model)[1:])\n",
+    "\n",
+    "#INTESITY NOT PECD\n",
+    "def INTENSITY2(x, b1, b2):\n",
+    "    return 2 + 2*b1*x - 0.5*b2*(3*x**2-1)\n",
+    "\n",
+    "def INTENSITY2_cross(x, A, b1, b2):\n",
+    "    return A/(4*np.pi)*(1 + b1*x - 0.25*b2*(3*x**2-1))\n",
+    "\n",
+    "\n",
+    "# param_matrix=np.zeros((6,72)) #nparray initialization\n",
+    "param_matrix = [[0 for i in range(6)] for j in range(3)] #i col, j row\n",
+    "\n",
+    "for col, i in zip(MFPAD_RCR[0].T,range(len(MFPAD_RCR[0].T))):\n",
+    "    x_data = np.linspace(-1, 1, len(col))\n",
+    "    y_data = col\n",
+    "    y_err = np.sqrt(col)\n",
+    "    lsq = BetterLeastSquares(INTENSITY2_cross, x_data, y_data, y_err)\n",
+    "\n",
+    "    m = Minuit(lsq, errordef=Minuit.LEAST_SQUARES, limit_b1=(-1, 1), limit_b2=(-1, 1))\n",
+    "    m.migrad()\n",
+    "    m.hesse() # run covariance estimator\n",
+    "    # print(m.params)\n",
+    "    # for p in m.parameters:\n",
+    "        # print(\"{} = {:2.3e} +/- {:2.3e}\".format(p, m.values[p], m.errors[p]))\n",
+    "    for j,p in zip(range(len(m.parameters)),m.parameters):\n",
+    "        param_matrix[j][i] = ((m.values[p], m.errors[p]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_data = np.linspace(-1, 1, len(MFPAD_RCL[0].T[0]))\n",
+    "y_data = MFPAD_RCL[0].T[0]\n",
+    "y_err = np.sqrt(MFPAD_RCL[0].T[0])\n",
+    "lsq = BetterLeastSquares(INTENSITY2_cross, x_data, y_data, y_err)\n",
+    "\n",
+    "m = Minuit(lsq, errordef=Minuit.LEAST_SQUARES, limit_b1=(-1, 1), limit_b2=(-1, 1))\n",
+    "m.migrad()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b1=[col[0] for col in param_matrix[1]]\n",
+    "b1_err=[col[1] for col in param_matrix[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.interpolate import make_interp_spline, BSpline\n",
+    "x_data_new = np.linspace(-1, 1, 100)\n",
+    "bspl = make_interp_spline(x_data, INTENSITY2_cross(x_data, *m.values.values()), k=3)\n",
+    "plt.plot(x_data_new, bspl(x_data_new))\n",
+    "plt.scatter(x_bins,MFPAD_RCL[0].T[0],color='r')\n",
+    "plt.errorbar(x_bins,MFPAD_RCL[0].T[0], yerr=np.sqrt(MFPAD_RCL[0].T[0]), fmt=\"o\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#b1 trends across the phi in MFPAD\n",
+    "x_data_b1=np.linspace(-1,1,len(b1))\n",
+    "plt.scatter(x_data_b1,b1,color='r')\n",
+    "plt.errorbar(x_data_b1,b1, yerr=b1_err, fmt=\"o\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
+    }
+   },
+   "name": "Python 3.8.5 64-bit ('base': conda)"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -54,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
