--- a/b1_map.ipynb
+++ b/b1_map.ipynb
@@ -429,8 +429,7 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.2,0.2)\n",
     "\n",
-    "# for i in range(3):\n",
-    "for i in range(len(cosphi)):\n",
+    "for i in range(len(cosphi)): # len = 72\n",
     "    #print(i)\n",
     "    x_data = ctheta_cred\n",
     "    y_data = cPECD_norm[i]\n",
@@ -449,9 +448,11 @@
     "    ax = fig.add_subplot(6, 12, i+1)\n",
     "    ax.plot(x_data_new, bspl(x_data_new))\n",
     "    ax.scatter(ctheta_cred,y_data,color='r')\n",
+    "    ax.set_xlim(custom_xlim)\n",
+    "    ax.set_ylim(custom_ylim)\n",
     "    ax.errorbar(ctheta_cred,y_data, yerr=y_err, fmt=\"o\")\n",
     "    # ax.axis('off')\n",
-    "    for j,p in zip(range(len(m.parameters)),m.parameters):\n",
+    "    for j,p in zip(range(len(m.parameters)),m.parameters): # len = 6\n",
     "        param_matrix[j][i] = ((m.values[p], m.errors[p]))\n",
     "        # param_matrix[i][j] = (m.values[p], m.errors[p])\n",
     "\n",
@@ -459,6 +460,18 @@
     "plt.show()\n",
     "    # for p in m.parameters:\n",
     "    #     print(\"{} = {:2.3e} +/- {:2.3e}\".format(p, m.values[p], m.errors[p]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pprint\n",
+    "pprint.pprint(param_matrix)"
    ]
   },
   {
