--- a/b1_slice.ipynb
+++ b/b1_slice.ipynb
@@ -21,6 +21,8 @@
     "\n",
     "import re\n",
     "\n",
+    "import pprint\n",
+    "\n",
     "import mplhep as hep\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
@@ -234,6 +236,104 @@
     "plt.scatter(x_data_b1,b1,color='r')\n",
     "plt.errorbar(x_data_b1,b1, yerr=b1_err, fmt=\"o\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class LeastSquares:\n",
+    "    \"\"\"\n",
+    "    Generic least-squares cost function with error.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, model, x, y, err):\n",
+    "        self.model = model  # model predicts y for given x\n",
+    "        self.x = np.array(x)\n",
+    "        self.y = np.array(y)\n",
+    "        self.err = np.array(err)\n",
+    "        # self.err = err\n",
+    "\n",
+    "    def __call__(self, *par):  # we accept a variable number of model parameters\n",
+    "        ym = self.model(self.x, *par)\n",
+    "        z = (self.y - ym)/(self.err**2)\n",
+    "        return np.sum(z**2)\n",
+    "\n",
+    "# does this inherits from LeastSquare?\n",
+    "class BetterLeastSquares(LeastSquares):\n",
+    "    def __init__(self, model, x, y, err):\n",
+    "        super().__init__(model, x, y, err)\n",
+    "        self.func_code = make_func_code(describe(model)[1:])\n",
+    "\n",
+    "#INTESITY NOT PECD\n",
+    "def INTENSITY2(x, b1, b2):\n",
+    "    return 2 + 2*b1*x - 0.5*b2*(3*x**2-1)\n",
+    "\n",
+    "def INTENSITY2_cross(x, A, b1, b2):\n",
+    "    return A/(4*np.pi)*(1 + b1*x - 0.25*b2*(3*x**2-1))\n",
+    "\n",
+    "# param_matrix=np.zeros((6,72)) #nparray initialization\n",
+    "param_matrix = [[[0 for j in range(3)] for i in range(6)] for z in range(72)] #i col, j row, z height\n",
+    "\n",
+    "# pprint.pprint(param_matrix)\n",
+    "\n",
+    "for row, z in zip(MFPAD_RCR,range(len(MFPAD_RCR))): # len = 72\n",
+    "    for col, i in zip(MFPAD_RCR[z].T,range(len(MFPAD_RCR[z].T))): # len = 6\n",
+    "        x_data = np.linspace(-1, 1, len(col))\n",
+    "        y_data = col\n",
+    "        y_err = np.sqrt(col)\n",
+    "        lsq = BetterLeastSquares(INTENSITY2_cross, x_data, y_data, y_err)\n",
+    "\n",
+    "        m = Minuit(lsq, errordef=Minuit.LEAST_SQUARES, limit_b1=(-1, 1), limit_b2=(-1, 1))\n",
+    "        m.migrad()\n",
+    "        m.hesse() # run covariance estimator\n",
+    "        # print(m.params)\n",
+    "        # for p in m.parameters:\n",
+    "            # print(\"{} = {:2.3e} +/- {:2.3e}\".format(p, m.values[p], m.errors[p]))\n",
+    "        for j,p in zip(range(len(m.parameters)),m.parameters): # len = 3\n",
+    "            param_matrix[z][i][j] = ((m.values[p], m.errors[p]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " b1=[col[1][1] for col in param_matrix[8]]\n",
+    " b1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.interpolate import interp1d\n",
+    "\n",
+    "fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex=True , sharey=True)\n",
+    "fig.subplots_adjust(hspace = .5, wspace=.5)\n",
+    "custom_xlim = (-1, 1)\n",
+    "custom_ylim = (-0.9,0.9)\n",
+    "x_data_new_b1 = np.linspace(-1, 1, 50)\n",
+    "\n",
+    "for i,axes in zip(range(72),axes.flatten()):\n",
+    "    b1=[col[1][0] for col in param_matrix[i]]\n",
+    "    b1_err=[col[1][1] for col in param_matrix[i]]\n",
+    "    # spl = BSpline(x_data_b1, b1, k=4)\n",
+    "    f2=interp1d(x_data_b1,b1, kind='cubic')\n",
+    "    axes.plot(x_data_new_b1, f2(x_data_new_b1), 'b-', lw=4, alpha=0.4, label='cubic')\n",
+    "    axes.scatter(x_data_b1,b1,color='r')\n",
+    "    axes.set_xlim(custom_xlim)\n",
+    "    axes.set_ylim(custom_ylim)\n",
+    "    axes.errorbar(x_data_b1,b1, yerr=b1_err, fmt=\"o\")\n",
+    "fig.tight_layout()"
    ]
   },
   {
