Correction with preview Notebook, re-run, title update

--- a/3D_MFPADs_plotly.ipynb
+++ b/3D_MFPADs_plotly.ipynb
@@ -23,7 +23,7 @@
     "from mpl_toolkits.mplot3d import Axes3D\r\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\r\n",
     "\r\n",
-    "import max_functions as mf\r\n",
+    "import plotly.graph_objects as go\r\n",
     "\r\n",
     "plt.style.use(hep.style.ROOT) # For now ROOT defaults to CMS\r\n",
     "\r\n",
@@ -56,14 +56,14 @@
     "\r\n",
     "# convertion to spherical coordinates 1D vectors of shape (2000,1)\r\n",
     "x = counts * np.sin(theta_rad) * np.cos(phi_rad)\r\n",
-    "X = x.reshape(200,100)\r\n",
+    "X = x.reshape(100,200)\r\n",
     "y = counts * np.sin(theta_rad) * np.sin(phi_rad)\r\n",
-    "Y = y.reshape(200,100)\r\n",
+    "Y = y.reshape(100,200)\r\n",
     "z = counts * ctheta\r\n",
-    "Z = z.reshape(200,100)\r\n",
+    "Z = z.reshape(100,200)\r\n",
     "\r\n",
     "d = np.sqrt(x**2+y**2+z**2)\r\n",
-    "d_matrix = np.sqrt(x_matrix**2+y_matrix**2+z_matrix**2)"
+    "d_matrix = np.sqrt(X**2+Y**2+Z**2)"
    ]
   },
   {
@@ -72,11 +72,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure(data=[go.Mesh3d(x=x, y=y, z=z,\n",
-    "                   opacity=0.5,\n",
-    "                   color='rgba(244,22,100,0.6)'\n",
-    "                  )])\n",
-    "\n",
+    "fig = go.Figure(data=[go.Mesh3d(x=x, y=y, z=z,\r\n",
+    "                    width=500, height=500,\r\n",
+    "                    opacity=0.5,\r\n",
+    "                    color='rgba(244,22,100,0.6)'\r\n",
+    "                  )])\r\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory triangulated',margin=dict(l=65, r=50, b=65, t=90))\r\n",
     "fig.show()"
    ]
   },
@@ -87,10 +88,9 @@
    "outputs": [],
    "source": [
     "# Go scatters do not provide a legend\r\n",
-    "fig = go.Figure(data=[go.Scatter3d(x=x, y=y, z=z\n",
-    "                   title='TFMeOx MFPADs theory scattered',\r\n",
-    "                   mode='markers',\r\n",
-    "                   marker=dict(\r\n",
+    "fig = go.Figure(data=[go.Scatter3d(x=x, y=y, z=z,\r\n",
+    "                    mode='markers',\r\n",
+    "                    marker=dict(\r\n",
     "                        size=5,\r\n",
     "                        color=d,            # set color to an array/list of desired values\r\n",
     "                        colorscale='Viridis',   # choose a colorscale\r\n",
@@ -98,7 +98,7 @@
     "                        showscale=True          # to show the legend according to the color\r\n",
     "                   )\r\n",
     "                )])\r\n",
-    "fig.update_layout(margin=dict(l=0, r=0, b=0, t=0))\r\n",
+    "fig.update_layout(title='TFMeOx MFPADs theory scattered',margin=dict(l=0, r=0, b=0, t=0))\r\n",
     "fig.show()"
    ]
   },
@@ -110,8 +110,9 @@
    "source": [
     "fig = go.Figure(data=[go.Surface(z=Z, x=X, y=Y, surfacecolor=d_matrix)])\r\n",
     "fig.update_layout(title='TFMeOx MFPADs theor surfy', autosize=False,\r\n",
-    "                  width=500, height=500,\r\n",
-    "                  margin=dict(l=65, r=50, b=65, t=90))\r\n",
+    "                #   width=500, height=500,\r\n",
+    "                #   margin=dict(l=65, r=50, b=65, t=90))\r\n",
+    "                  margin=dict(l=0, r=0, b=0, t=0))\r\n",
     "fig.show()"
    ]
   },
@@ -125,13 +126,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit (conda)",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
      "hash": "14199186261275788dfea1c403a51d6f79ce13d90df2e64b59dbb79af406f697"
     }
    },
-   "name": "Python 3.8.5 64-bit (conda)"
+   "name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
