contrast map implemented with plotly

--- a/b1_map.ipynb
+++ b/b1_map.ipynb
@@ -336,8 +336,8 @@
     "\n",
     "    def __call__(self, *par):  # we accept a variable number of model parameters\n",
     "        ym = self.model(self.x, *par)\n",
-    "        z = (self.y - ym)/(self.err**2)\n",
-    "        return np.sum(z**2)\n",
+    "        chi2 = np.sum((self.y - ym)**2/(self.err**2))\n",
+    "        return chi2\n",
     "\n",
     "# does this inherits from LeastSquare?\n",
     "class BetterLeastSquares(LeastSquares):\n",
@@ -412,8 +412,8 @@
     "\n",
     "    def __call__(self, *par):  # we accept a variable number of model parameters\n",
     "        ym = self.model(self.x, *par)\n",
-    "        z = (self.y - ym)/(self.err**2)\n",
-    "        return np.sum(z**2)\n",
+    "        chi2 = np.sum((self.y - ym)**2/(self.err**2))\n",
+    "        return chi2\n",
     "\n",
     "# does this inherits from LeastSquare?\n",
     "class BetterLeastSquares(LeastSquares):\n",
@@ -528,6 +528,109 @@
     "    axes[i].contourf(cosphi[:,1].reshape(12,6),cosphi[:,0].reshape(12,6),test[i,:,0].reshape(12,6), np.arange(-1., 1., .005), extend='both', cmap='seismic')\n",
     "    # axes[i].contourf(cosphi[:,0].reshape(12,6),cosphi[:,1].reshape(12,6),test[i,:,0].reshape(6,12).T)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib as mpl\n",
+    "from matplotlib import cm\n",
+    "\n",
+    "magma_cmap = mpl.cm.get_cmap('magma')\n",
+    "seismic_cmap = mpl.cm.get_cmap('seismic')\n",
+    "\n",
+    "magma_rgb = []\n",
+    "seismic_rgb = []\n",
+    "norm = mpl.colors.Normalize(vmin=0, vmax=255)\n",
+    "\n",
+    "for i in range(0, 255):\n",
+    "       k = mpl.colors.colorConverter.to_rgb(magma_cmap(norm(i)))\n",
+    "       magma_rgb.append(k)\n",
+    "\n",
+    "for i in range(0, 255):\n",
+    "       k = mpl.colors.colorConverter.to_rgb(seismic_cmap(norm(i)))\n",
+    "       seismic_rgb.append(k)\n",
+    "\n",
+    "def matplotlib_to_plotly(cmap, pl_entries):\n",
+    "    h = 1.0/(pl_entries-1)\n",
+    "    pl_colorscale = []\n",
+    "\n",
+    "    for k in range(pl_entries):\n",
+    "        C = list(map(np.uint8, np.array(cmap(k*h)[:3])*255))\n",
+    "        pl_colorscale.append([k*h, 'rgb'+str((C[0], C[1], C[2]))])\n",
+    "\n",
+    "    return pl_colorscale\n",
+    "\n",
+    "Magma_r = matplotlib_to_plotly(magma_cmap, 255)\n",
+    "Seismic_r = matplotlib_to_plotly(seismic_cmap, 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "fig = make_subplots(rows=1, cols=2,\n",
+    "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
+    "\n",
+    "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
+    "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.75, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 2)\n",
+    "\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "fig = make_subplots(rows=6, cols=2, vertical_spacing=0.015,\n",
+    "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
+    "\n",
+    "#b1\n",
+    "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
+    "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 2)\n",
+    "\n",
+    "#b2\n",
+    "fig.add_trace(go.Contour(z=test[1,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-1, end=1, size=0.5)), 2, 1)\n",
+    "fig.add_trace(go.Contour(z=test[1,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-1, end=1, size=0.5)), 2, 2)\n",
+    "\n",
+    "#b3\n",
+    "fig.add_trace(go.Contour(z=test[2,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 3, 1)\n",
+    "fig.add_trace(go.Contour(z=test[2,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 3, 2)\n",
+    "\n",
+    "#b4\n",
+    "fig.add_trace(go.Contour(z=test[3,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 4, 1)\n",
+    "fig.add_trace(go.Contour(z=test[3,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 4, 2)\n",
+    "\n",
+    "#b5\n",
+    "fig.add_trace(go.Contour(z=test[4,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 5, 1)\n",
+    "fig.add_trace(go.Contour(z=test[4,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 5, 2)\n",
+    "\n",
+    "#b6\n",
+    "fig.add_trace(go.Contour(z=test[5,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-1, end=1, size=0.5)), 6, 1)\n",
+    "fig.add_trace(go.Contour(z=test[5,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-1, end=1, size=0.5)), 6, 2)\n",
+    "\n",
+    "fig.update_layout(coloraxis=dict(colorscale=Seismic_r), showlegend=False,\n",
+    "    autosize=False,\n",
+    "    # width=800,\n",
+    "    height=1500,\n",
+    "    margin=dict(l=0,r=0,b=15,t=15)\n",
+    "    )\n",
+    "\n",
+    "fig.show()"
    ]
   },
   {
