plotly: fixed scale and for cycle to plot b1-b6

--- a/b1_map.ipynb
+++ b/b1_map.ipynb
@@ -593,41 +593,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#NOTE: THE SCALE IS FAKE FOR PLOT 2 AND 6\n",
+    "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
+    "\n",
+    "fig = go.Figure()\n",
     "\n",
     "fig = make_subplots(rows=6, cols=2, vertical_spacing=0.015,\n",
     "                    subplot_titles=('Without Smoothing', 'With Smoothing'))\n",
     "\n",
-    "#b1\n",
-    "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
-    "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 2)\n",
+    "for i in range(len(test)):\n",
+    "    if i==1 or i==5:\n",
+    "        fig.add_trace(go.Contour(z=test[i,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=test[i,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"no\", showscale=False, showlegend=False, contours=dict(start=-1, end=1, size=0.5)), i+1, 2)\n",
+    "    else:\n",
+    "        fig.add_trace(go.Contour(z=test[i,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 1)\n",
+    "        fig.add_trace(go.Contour(z=test[i,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r, legendgroup=\"yes\", contours=dict(start=-0.2, end=0.2, size=0.04)), i+1, 2)\n",
     "\n",
-    "#b2\n",
-    "fig.add_trace(go.Contour(z=test[1,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-1, end=1, size=0.5)), 2, 1)\n",
-    "fig.add_trace(go.Contour(z=test[1,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-1, end=1, size=0.5)), 2, 2)\n",
-    "\n",
-    "#b3\n",
-    "fig.add_trace(go.Contour(z=test[2,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 3, 1)\n",
-    "fig.add_trace(go.Contour(z=test[2,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 3, 2)\n",
-    "\n",
-    "#b4\n",
-    "fig.add_trace(go.Contour(z=test[3,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 4, 1)\n",
-    "fig.add_trace(go.Contour(z=test[3,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 4, 2)\n",
-    "\n",
-    "#b5\n",
-    "fig.add_trace(go.Contour(z=test[4,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 5, 1)\n",
-    "fig.add_trace(go.Contour(z=test[4,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 5, 2)\n",
-    "\n",
-    "#b6\n",
-    "fig.add_trace(go.Contour(z=test[5,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-1, end=1, size=0.5)), 6, 1)\n",
-    "fig.add_trace(go.Contour(z=test[5,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.85, colorscale=Seismic_r,contours=dict(start=-1, end=1, size=0.5)), 6, 2)\n",
-    "\n",
-    "fig.update_layout(coloraxis=dict(colorscale=Seismic_r), showlegend=False,\n",
+    "fig.update_layout(\n",
+    "    # coloraxis=dict(colorscale=Seismic_r),\n",
+    "    # showlegend=False,\n",
     "    autosize=False,\n",
     "    # width=800,\n",
     "    height=1500,\n",
-    "    margin=dict(l=0,r=0,b=15,t=15)\n",
+    "    margin=dict(l=0,r=0,b=25,t=25)\n",
     "    )\n",
     "\n",
     "fig.show()"
