minor changes in layout

--- a/3D_MFPADs_plotly.ipynb
+++ b/3D_MFPADs_plotly.ipynb
@@ -73,11 +73,14 @@
    "outputs": [],
    "source": [
     "fig = go.Figure(data=[go.Mesh3d(x=x, y=y, z=z,\r\n",
-    "                    width=500, height=500,\r\n",
-    "                    opacity=0.5,\r\n",
-    "                    color='rgba(244,22,100,0.6)'\r\n",
-    "                  )])\r\n",
-    "fig.update_layout(title='TFMeOx MFPADs theory triangulated',margin=dict(l=65, r=50, b=65, t=90))\r\n",
+    "                      opacity=0.5,\r\n",
+    "                      color=\"rgba(244,22,100,06)\"\r\n",
+    "                 \r\n",
+    " )])\r\n",
+    "fig.update_layout(title=\"TFMeOx MFPADs theory triangulated\",\r\n",
+    "                  width=500,\r\n",
+    "                  height=500,\r\n",
+    "                  margin=dict(l=65, r=50, b=65, t=90))\r\n",
     "fig.show()"
    ]
   },
@@ -108,20 +111,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure(data=[go.Surface(z=Z, x=X, y=Y, surfacecolor=d_matrix)])\r\n",
+    "fig = go.Figure(data=[go.Surface(z=Z, x=X, y=Y, surfacecolor=d_matrix, connectgaps=True)])\r\n",
     "fig.update_layout(title='TFMeOx MFPADs theor surfy', autosize=False,\r\n",
     "                #   width=500, height=500,\r\n",
     "                #   margin=dict(l=65, r=50, b=65, t=90))\r\n",
     "                  margin=dict(l=0, r=0, b=0, t=0))\r\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
