--- a/b1_map.ipynb
+++ b/b1_map.ipynb
@@ -583,6 +583,14 @@
     "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0, colorscale=Seismic_r, contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 1)\n",
     "fig.add_trace(go.Contour(z=test[0,:,0], x=cosphi[:,1], y=cosphi[:,0], line_smoothing=0.75, colorscale=Seismic_r,contours=dict(start=-0.2, end=0.2, size=0.04)), 1, 2)\n",
     "\n",
+    "fig.update_layout(\n",
+    "    # coloraxis=dict(colorscale=Seismic_r),\n",
+    "    # showlegend=False,\n",
+    "    autosize=False,\n",
+    "    width=900,\n",
+    "    height=450,\n",
+    "    margin=dict(l=5,r=5,b=25,t=25)\n",
+    "    )\n",
     "\n",
     "fig.show()"
    ]
@@ -593,16 +601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#NOTE: THE SCALE IS FAKE FOR PLOT 2 AND 6\n",
+    "#NOTE: THE SCALE IS FAKE FOR PLOT 2 AND 6!\n",
     "\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
