--- a/contrast_map.ipynb
+++ b/contrast_map.ipynb
@@ -155,7 +155,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib as mpl\n",
+    "from matplotlib import cm\n",
+    "\n",
+    "magma_cmap = mpl.cm.get_cmap('magma')\n",
+    "seismic_cmap = mpl.cm.get_cmap('seismic')\n",
+    "\n",
+    "magma_rgb = []\n",
+    "seismic_rgb = []\n",
+    "norm = mpl.colors.Normalize(vmin=0, vmax=255)\n",
+    "\n",
+    "for i in range(0, 255):\n",
+    "       k = mpl.colors.colorConverter.to_rgb(magma_cmap(norm(i)))\n",
+    "       magma_rgb.append(k)\n",
+    "\n",
+    "for i in range(0, 255):\n",
+    "       k = mpl.colors.colorConverter.to_rgb(seismic_cmap(norm(i)))\n",
+    "       seismic_rgb.append(k)\n",
+    "\n",
+    "def matplotlib_to_plotly(cmap, pl_entries):\n",
+    "    h = 1.0/(pl_entries-1)\n",
+    "    pl_colorscale = []\n",
+    "\n",
+    "    for k in range(pl_entries):\n",
+    "        C = list(map(np.uint8, np.array(cmap(k*h)[:3])*255))\n",
+    "        pl_colorscale.append([k*h, 'rgb'+str((C[0], C[1], C[2]))])\n",
+    "\n",
+    "    return pl_colorscale\n",
+    "\n",
+    "Magma_r = matplotlib_to_plotly(magma_cmap, 255)\n",
+    "Seismic_r = matplotlib_to_plotly(seismic_cmap, 255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "fig = go.Figure(data=go.Contour(z=PECD.T, x=costheta_nhistSCL, y=phi_nhistSCL, line_smoothing=0.85, colorscale=Seismic_r, contours=dict(start=-1, end=1, size=0.5) ))\n",
+    "\n",
+    "fig.show()"
+   ]
   }
  ],
  "metadata": {
