fixed variables at the loading, added plotly

--- a/contrast_map.ipynb
+++ b/contrast_map.ipynb
@@ -22,25 +22,7 @@
     "#to see which classes have been defined so far\n",
     "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].keys()\n",
-    "dict(fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].classes())\n",
-    "histRCR = fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check/MFPAD3D_ALLdir_usr_gated\"]\n",
-    "\n",
-    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].keys()\n",
-    "dict(fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].classes())\n",
-    "histRCR = fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check/MFPAD3D_ALLdir_usr_gated\"]\n",
-    "\n",
-    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileRCL[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].keys()\n",
-    "dict(fileRCL[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].classes())\n",
-    "histRCL = fileRCL[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check/MFPAD3D_ALLdir_usr_gated\"]\n",
-    "\n",
-    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
-    "fileSCL[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].keys()\n",
-    "dict(fileSCL[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].classes())\n",
-    "histSCL = fileSCL[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check/MFPAD3D_ALLdir_usr_gated\"]"
+    "path = \"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check/MFPAD3D_ALLdir_usr_gated\""
    ]
   },
   {
@@ -48,7 +30,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#low binning\n",
+    "fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "# fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].keys()\n",
+    "# dict(fileRCR[\"angular_distr_el/ALL_CH/test/MFPADs_e_multinew_check\"].classes())\n",
+    "fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#high binning\n",
+    "# fileRCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "# fileSCR = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CR_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "# fileRCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\R-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")\n",
+    "# fileSCL = uproot.open(r\"D:\\UniFRK\\SEXTANT_sept2018\\newbins\\S-C3H3F3O_550eV_CL_newEfield_ALLCH_MFPAD_30_t0.root\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "histRCR = fileRCR[path]\n",
+    "histSCR = fileSCR[path]\n",
+    "histRCL = fileRCL[path]\n",
+    "histSCL = fileSCL[path]"
+   ]
   },
   {
    "cell_type": "code",
@@ -68,9 +83,9 @@
     "phi_nhistRCL = nhistRCL[1][0][0] # phi\n",
     "costheta_nhistRCL = nhistRCL[1][0][1] # cos(theta)\n",
     "\n",
-    "phistSCR = histRCR.pandas()\n",
-    "nhistSCR = histRCR.numpy()\n",
-    "r_norm_nhistSCR = nhistSCR[0] / nhistRCR[0].sum(axis=1)[:,np.newaxis] # z values normalise to 1\n",
+    "phistSCR = histSCR.pandas()\n",
+    "nhistSCR = histSCR.numpy()\n",
+    "r_norm_nhistSCR = nhistSCR[0] / nhistSCR[0].sum(axis=1)[:,np.newaxis] # z values normalise to 1\n",
     "phi_nhistSCR = nhistSCR[1][0][0] # phi\n",
     "costheta_nhistSCR = nhistSCR[1][0][1] # cos(theta)\n",
     "\n",
@@ -146,6 +161,7 @@
    "source": [
     "plt.imshow(PECD.T, extent= [costheta_nhistSCL[0],costheta_nhistSCL[-1],phi_nhistSCL[0],phi_nhistSCL[-1]], interpolation='quadric', cmap='seismic', aspect=\"auto\")\n",
     "# interpolation: [bicubic, quadric, spline16]\n",
+    "plt.title(\"Contrast map with the right axis, quadratic interpolation\")\n",
     "plt.colorbar()\n",
     "# plt.axis(aspect='image');"
    ]
@@ -197,10 +213,29 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "\n",
-    "fig = go.Figure(data=go.Contour(z=PECD.T, x=costheta_nhistSCL, y=phi_nhistSCL, line_smoothing=0.85, colorscale=Seismic_r, contours=dict(start=-1, end=1, size=0.5) ))\n",
+    "ctheta_cred = (costheta_nhistSCL[1:] + costheta_nhistSCL[:-1])/2\n",
+    "phi_cred = (phi_nhistSCL[1:] + phi_nhistSCL[:-1])/2\n",
+    "\n",
+    "fig = go.Figure(data=go.Contour(x=phi_cred, y=ctheta_cred, z=PECD.T, line_smoothing=0.85, colorscale=Seismic_r, contours=dict(start=-0.08, end=0.08, size=0.02) ))\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    # coloraxis=dict(colorscale=Seismic_r),\n",
+    "    # showlegend=False,\n",
+    "    autosize=False,\n",
+    "    width=500,\n",
+    "    height=450,\n",
+    "    margin=dict(l=5,r=5,b=25,t=25)\n",
+    "    )\n",
     "\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
